finished optimizer and pop up.

--- a/.gitignore
+++ b/.gitignore
@@ -61,6 +61,14 @@ local_settings.py
 db.sqlite3
 db.sqlite3-journal
 
+# Local databases (generated)
+*.db
+*.db-journal
+*.db-wal
+*.db-shm
+
+
+
 # Flask stuff:
 instance/
 .webassets-cache
